<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Create Meme - always be in the overflow -->
    <item android:id="@+id/main_toolbar_add_meme"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_toolbar_add_meme"
        app:showAsAction="never"/>

    <!-- Settings - always be in the overflow -->
    <item android:id="@+id/main_toolbar_settings"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_toolbar_settings"
        app:showAsAction="never"/>

    <!-- Friends - always be in the overflow -->
    <item android:id="@+id/main_toolbar_friends"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_toolbar_friends"
        app:showAsAction="never"/>

    <!-- Sign Out -  should appear as action button if possible -->
    <item
        android:id="@+id/main_toolbar_signout"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_toolbar_signout"
        app:showAsAction="never"/>


</menu>