<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bemad.bcarlson.memer.AddMemeActivity"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/addMemeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_meme_description_text"/>
    <EditText
        android:id="@+id/addMemeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_meme_description"/>
    <Button
        android:id="@+id/addMemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_meme_button"/>


</LinearLayout>
