<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bemad.bcarlson.memer.comments.MemeClickActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/memeClickMeme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/meme_click_description_text" />
        <TextView
            android:id="@+id/memeClickDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/input"/>
        <TextView
            android:id="@+id/memeClickCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/input"/>
        <TextView
            android:id="@+id/memeClickAddComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meme_click_comment_text"
            android:textColor="@color/blue_button"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:background="@color/grey_white">
        <LinearLayout
            android:id="@+id/memeClickCommentType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <TextView
                android:id="@+id/memeClickPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meme_click_popular_comments"
                android:textColor="@color/blue_button"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <TextView
                android:id="@+id/memeClickRecent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/meme_click_recent_comments"
                android:textColor="@color/blue_button"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/memeClickCommentType">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/memeClickSendLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@color/white"
            android:visibility="gone">
            <EditText
                android:id="@+id/memeClickComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"/>
            <ImageView
                android:id="@+id/memeClickCommentButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                android:src="@drawable/comment"/>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
